# SDL-ESP32-component

./: .gitignore  CMakeLists.txt  README.md  diagram.json  env-esp-box.sh  partitions.csv  prepare-data.sh  sdkconfig  sdkconfig.bsp.esp-box  sdkconfig.defaults  wokwi.toml
components/HelloSDL/: CMakeLists.txt  file.c  hello.c  hello.h  idf_component.yml  keyboard.h  palette.c  palette.h  pcxload.c  pcxload.h  video.c  video.h  video_scale.h
components/OpenTyrian/: CMakeLists.txt  animlib.c  episodes.c  episodes.h  file.c  game_menu.c  helptext.c  helptext.h  mainint.c  menus.c  menus.h  opl.c  palette.c  palette.h  sprite.c  sprite.h  starlib.c  tyrian2.c  varz.c  varz.h
components/SDL/: CMakeLists.esp-box.txt  CMakeLists.txt  SDL_audio.c  SDL_audio.h  SDL_event.h  SDL_system.c  SDL_system.h  SDL_video.c  idf_component.esp-box.yml  idf_component.yml  spi_lcd.c
components/georgik__sdl/: CMakeLists.m5stack_core_s3.txt  README.md  SDL_event.c  SDL_video.c
data/espressif/: espressif.pcx
main/: CMakeLists.txt  app_main.c  idf_component.esp-box.yml  idf_component.yml
support/: generate-palette-from-git.py
