idf_component_register(
    SRCS "tyrian2.c" "opentyr.c" "xmas.c" "musmast.c" "animlib.c" "network.c" "sprite.c" "game_menu.c" "palette.c" "mouse.c" "varz.c" "starlib.c" "shots.c" "editship.c" "opl.c" "nortvars.c" "sndmast.c" "vga256d.c" "lds_play.c" "video.c" "keyboard.c" "vga_palette.c" "mainint.c" "backgrnd.c" "font.c" "arg_parse.c" "menus.c" "fonthand.c" "setup.c" "helptext.c" "video_scale_hqNx.c" "pcxmast.c" "destruct.c" "lvlmast.c" "pcxload.c" "config.c" "mtrand.c" "params.c" "nortsong.c" "jukebox.c" "file.c" "joystick.c" "config_file.c" "lvllib.c" "video_scale.c" "episodes.c" "scroller.c" "picload.c" "sizebuf.c" "player.c"  "std_support.c" 
        "loudness.c"
    INCLUDE_DIRS "."
    REQUIRES "SDL"
)
